home-automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-home-automation
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - home-automation.io
      secretName: letsencrypt
  rules:
    - host: home-automation.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-assistant
              port:
                number: 80
